--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.42"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0-alpha03"
+        classpath 'com.google.gms:google-services:4.3.13'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
+
     }
 }
 
