--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,12 +18,10 @@ android {
         applicationId "com.klmobile.carddiary"
         minSdkVersion 21
         targetSdkVersion 32
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.1"
         multiDexEnabled = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        buildConfigField 'String', 'UNSPLASH_ACCESS_KEY', '"Client-ID d132f67143bf64c0c12e5eceb8ab9006bbda519a5857720bf6c68ad0adc4c2a3"'
     }
 
     buildTypes {
@@ -31,14 +29,12 @@ android {
             //applicationId "com.klmobile.carddiary"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField 'String', 'BASE_URL', '"https://api.unsplash.com/"'
             buildConfigField 'boolean', 'LOGGABLE', 'false'
         }
         debug {
             //applicationId "com.dev.carddiary"
             testCoverageEnabled true
             debuggable true
-            buildConfigField 'String', 'BASE_URL', '"https://api.unsplash.com/"'
             buildConfigField 'boolean', 'LOGGABLE', 'true'
         }
     }
@@ -142,6 +138,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics'
 
     implementation project(':tedimagepicker')
+    implementation project(':month-year-picker')
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
