--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,7 +130,7 @@ dependencies {
     implementation 'com.gu.android:toolargetool:0.3.0'
     implementation 'com.github.dewinjm:monthyear-picker:1.0.2'
     implementation 'net.lingala.zip4j:zip4j:2.11.2'
-
+    implementation 'io.github.itsxtt:pattern-lock:0.2.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
