--- a/.github/workflows/build_release_file.yml
+++ b/.github/workflows/build_release_file.yml
@@ -4,6 +4,9 @@ name: Build
 ## Actions that will be executed when you push code currently none
 on:
   push:
+    branches:
+      - main
+      - develop
 
 ## 2
 jobs:
@@ -15,24 +18,20 @@ jobs:
         uses: actions/checkout@v2
       # 2
       - name: Generate Release APK
-        run: ./gradlew assembleRelease
+        run: ./gradlew bundleRelease
       # 3
       - name: Sign APK
         uses: r0adkll/sign-android-release@v1
         # ID used to access action output
         id: sign_app
         with:
+          releaseDirectory: app/build/outputs/bundle/productRelease
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
           alias: ${{ secrets.ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_PASSWORD }}
       # 4
-      - uses: actions/upload-artifact@master
+      - uses: actions/upload-artifact@v2
         with:
-          name: release.apk
+          name: Signed app bundle
           path: ${{steps.sign_app.outputs.signedReleaseFile}}
-      # 5
-      - uses: actions/upload-artifact@main
-        with:
-          name: mapping.txt
-          path: app/build/outputs/mapping/release/mapping.txt
