--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
     <application
         android:name=".presentation.App"
         android:allowBackup="true"
-        android:icon="@drawable/ic_app_icon"
+        android:icon="@drawable/normal"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_app_icon"
+        android:roundIcon="@drawable/circle"
         android:supportsRtl="true"
         android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.CleanArchitectKotlinFlowHiltSimplestway">
