--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply from: 'buildsystem/dependencies.gradle'
 
 buildscript {
-    ext.kotlin_version = "1.7.0"
+    ext.kotlin_version = "1.7.1"
     ext.compileSdkVer = 32
     ext.minSdkVer = 21
     ext.targetSdkVer = 32
@@ -14,8 +14,8 @@ buildscript {
         maven { url "https://www.jitpack.io" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
+        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.42"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0-alpha03"
         classpath 'com.google.gms:google-services:4.3.13'
